--- a/src/app/calculator/calculator.page.scss
+++ b/src/app/calculator/calculator.page.scss
@@ -11,6 +11,7 @@ ion-content, ion-item{
     --background: black;
     --color: white;
     --width:100%;
+    font-size: 1rem;
 }
 ion-select{
     --align:left;
