--- a/src/app/mass-calc-percent/mass-calc-percent.page.html
+++ b/src/app/mass-calc-percent/mass-calc-percent.page.html
@@ -9,56 +9,68 @@
 
 <ion-content [fullscreen]="true">
   <h1>Mass Calculator (for Percent)</h1>
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-        <ion-item>
-          <ion-label>Desired %: </ion-label>
-        </ion-item> 
-      </ion-col>
-      <ion-col>
-        <ion-item>
-          <ion-input type="tel" [(ngModel)]="Perc" name="Desired %" (ionChange)= "calcul()"></ion-input>
-        </ion-item> 
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item>
-          <ion-label>Desired Volume: </ion-label>
-        </ion-item> 
-      </ion-col>
-      <ion-col>
-        <ion-item>
-         <ion-input type="tel" [(ngModel)]="Volume" name="Volume" (ionChange)= "calcul()"></ion-input>
-        </ion-item> 
-      </ion-col>
-      <ion-col>
-        <ion-item>
-         <ion-select [(ngModel)]="VUnit" interface="action-sheet" (ionChange)= "calcul()">
-          <ion-select-option *ngFor="let unit of UVolume" [value] ="unit" [selected]="VUnit" >{{unit.unit}}</ion-select-option>
-        </ion-select>
-        </ion-item> 
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item>
-          Weight:
-        </ion-item>
-      </ion-col>
-      <ion-col>
-        <ion-item style ="--color:yellow;">
-         {{ Output}}
-        </ion-item>
-      </ion-col>
-      <ion-col>
-        <ion-item>
-          <ion-select class="ion-float-right" style="align-self:right" [(ngModel)]="PUnit" interface="action-sheet" (ionChange)= "calcul()">
-            <ion-select-option *ngFor="let unit of UMass" [value] ="unit" [selected]="PUnit" >{{unit.unit}}</ion-select-option>
-          </ion-select>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+
+  <ion-card>
+  
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label text-wrap>Desired %: </ion-label>
+            </ion-item> 
+          </ion-col>
+          <ion-col>
+            <ion-item>
+              <ion-input type="tel" [(ngModel)]="Perc" name="Desired %" (ionChange)= "calcul()"></ion-input>
+            </ion-item> 
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label text-wrap>Desired Volume: </ion-label>
+            </ion-item> 
+          </ion-col>
+          <ion-col>
+            <ion-item>
+            <ion-input type="tel" [(ngModel)]="Volume" name="Volume" (ionChange)= "calcul()"></ion-input>
+            </ion-item> 
+          </ion-col>
+          <ion-col>
+            <ion-item>
+            <ion-select [(ngModel)]="VUnit" interface="action-sheet" (ionChange)= "calcul()">
+              <ion-select-option *ngFor="let unit of UVolume" [value] ="unit" [selected]="VUnit" >{{unit.unit}}</ion-select-option>
+            </ion-select>
+            </ion-item> 
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-item text-wrap>
+              Weight:
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item style ="--color:yellow;">
+            {{ Output}}
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item>
+              <ion-select class="ion-float-right" style="align-self:right" [(ngModel)]="PUnit" interface="action-sheet" (ionChange)= "calcul()">
+                <ion-select-option *ngFor="let unit of UMass" [value] ="unit" [selected]="PUnit" >{{unit.unit}}</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
