--- a/src/global.scss
+++ b/src/global.scss
@@ -30,3 +30,10 @@ body {
 ion-content {
     background-color: black;
 }
+ion-label {
+    white-space: normal;
+}
+
+ion-input{
+    background-color: grey;
+}
