--- a/src/app/calculator/calculator.page.scss
+++ b/src/app/calculator/calculator.page.scss
@@ -4,14 +4,24 @@ ion-toolbar{
     box-shadow: inset 4px 4px 15px 25px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
 }
 
+ion-card {
+    --background: #222222 ;
+}
+
 ion-input{
+    --background: #3b3b3b ;
+    border-radius: 10px;
     margin-right:0%;
 }
-ion-content, ion-item{
+ion-content{
     --background: black;
     --color: white;
     --width:100%;
-    font-size: 1rem;
+}
+ ion-item{
+    --background: #222222;
+    --color: white;
+    --width:100%;
 }
 ion-select{
     --align:left;
