--- a/src/app/calculator/calculator.page.html
+++ b/src/app/calculator/calculator.page.html
@@ -20,7 +20,7 @@
            </ion-item>
           </ion-col>
           <ion-col>
-            <ion-item>
+            <ion-item class="input">
              <ion-input type="tel" [(ngModel)]="MWeight" name="Molecular Weight" (ionChange)= "calcul()"></ion-input>
            </ion-item>
           </ion-col>
@@ -37,7 +37,7 @@
            </ion-item>
           </ion-col>
           <ion-col>
-            <ion-item>
+            <ion-item class="input">
               <ion-input type="tel" [(ngModel)]="Molarity" name="Molarity" (ionChange)= "calcul()"></ion-input>
            </ion-item>
           </ion-col>
@@ -56,7 +56,7 @@
            </ion-item>
           </ion-col>
           <ion-col>
-            <ion-item>
+            <ion-item class="input">
               <ion-input type="tel" [(ngModel)]="Volume" name="Volume" (ionChange)= "calcul()"></ion-input>
            </ion-item>
           </ion-col>
