--- a/src/app/calculator/calculator.page.scss
+++ b/src/app/calculator/calculator.page.scss
@@ -8,10 +8,11 @@ ion-card {
     --background: #222222 ;
 }
 
-ion-input{
+.input{
     --background: #3b3b3b ;
     border-radius: 10px;
     margin-right:0%;
+    border: 1px solid #a2a2a2;
 }
 ion-content{
     --background: black;
