--- a/src/app/mass-calc-percent/mass-calc-percent.page.scss
+++ b/src/app/mass-calc-percent/mass-calc-percent.page.scss
@@ -3,14 +3,36 @@ ion-toolbar{
     --color: white;
     box-shadow: inset 4px 4px 15px 25px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
 }
+@media (max-width: 500px)  {
+    .concentration {
+        display: none;
+    }  
+    .concentration-abr {
+        display: block;
+    }    
+}
+@media (min-width: 500px)  {
+    .concentration {
+        display: block;
+    }   
+    .concentration-abr {
+        display: none;
+    }  
+}
+
+ion-label {
+    word-wrap: break-word;
+    width: 33%;
+}
 ion-card {
     --background: #222222 ;
 }
 
-ion-input{
+.input{
     --background: #3b3b3b ;
     border-radius: 10px;
     margin-right:0%;
+    border: 1px solid #a2a2a2;
 }
 ion-content{
     --background: black;
