--- a/src/app/volume-calculator/volume-calculator.page.html
+++ b/src/app/volume-calculator/volume-calculator.page.html
@@ -19,7 +19,7 @@
           </ion-item> 
           </ion-col>
           <ion-col>
-            <ion-item>
+            <ion-item class="input">
             <ion-input type="tel" [(ngModel)]="MWeight" name="Molecular Weight" (ionChange)= "calcul()"></ion-input>
           </ion-item> 
           </ion-col>
@@ -36,7 +36,7 @@
           </ion-item> 
           </ion-col>
           <ion-col>
-            <ion-item>
+            <ion-item class="input">
             <ion-input type="tel" [(ngModel)]="Molarity" name="Molarity" (ionChange)= "calcul()"></ion-input>
           </ion-item> 
           </ion-col>
@@ -55,7 +55,7 @@
             </ion-item> 
           </ion-col>
           <ion-col>
-            <ion-item>
+            <ion-item class="input">
             <ion-input type="tel" [(ngModel)]="Weight" name="Weight" (ionChange)= "calcul()"></ion-input>
             </ion-item> 
           </ion-col>
@@ -87,8 +87,6 @@
             {{ Output}}
             </ion-item>
           </ion-col>
-        </ion-row>
-        <ion-row>  
           <ion-col>
             <ion-item>
               <ion-select [(ngModel)]="VUnit" interface="action-sheet" (ionChange)= "calcul()">
