--- a/src/app/volume-calculator/volume-calculator.page.scss
+++ b/src/app/volume-calculator/volume-calculator.page.scss
@@ -8,10 +8,21 @@ ion-card {
     --background: #222222 ;
 }
 
-ion-input{
+ion-label{
+    -webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
+.input{
     --background: #3b3b3b ;
+    border: 1px solid #a2a2a2;
     border-radius: 10px;
     margin-right:0%;
+    margin-left: 0%;
+    -webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
 }
 ion-content{
     --background: black;
