remove toastr service and add contact paage

--- a/src/app/mass-calc-percent/mass-calc-percent.page.html
+++ b/src/app/mass-calc-percent/mass-calc-percent.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <h1>Mass Calculator (for Percent)</h1>
+  <h1>Mass Calculator for Concentration</h1>
 
   <ion-card>
   
