--- a/src/app/calculator/calculator.page.html
+++ b/src/app/calculator/calculator.page.html
@@ -44,7 +44,7 @@
           <ion-col>
             <ion-item>
               <ion-select [(ngModel)]="MUnit" interface="action-sheet" (ionChange)= "calcul()" >
-                <ion-select-option *ngFor="let unit of UMolarity" [value] ="unit" [selected]="MUnit" >{{unit.unit}}</ion-select-option>
+                <ion-select-option *ngFor="let unit of UMolarity" [value] ="unit">{{unit.unit}}</ion-select-option>
               </ion-select>
            </ion-item>
           </ion-col>
@@ -63,7 +63,7 @@
           <ion-col>
             <ion-item>
               <ion-select [(ngModel)]="VUnit" interface="action-sheet" (ionChange)= "calcul()">
-                <ion-select-option *ngFor="let unit of UVolume" [value] ="unit" [selected]="VUnit" >{{unit.unit}}</ion-select-option>
+                <ion-select-option *ngFor="let unit of UVolume" [value] ="unit" >{{unit.unit}}</ion-select-option>
               </ion-select>
            </ion-item>
           </ion-col>
@@ -89,7 +89,7 @@
           <ion-col>
             <ion-item>
               <ion-select style="align-self:right" [(ngModel)]="PUnit" interface="action-sheet" (ionChange)= "calcul()">
-                <ion-select-option *ngFor="let unit of UMass" [value] ="unit" [selected]="PUnit" >{{unit.unit}}</ion-select-option>
+                <ion-select-option *ngFor="let unit of UMass" [value] ="unit" >{{unit.unit}}</ion-select-option>
               </ion-select>
             </ion-item>
           </ion-col>
